--- a/templates/sobre/index.html
+++ b/templates/sobre/index.html
@@ -187,7 +187,7 @@
 								<div class="desc">
 									<a href="#"><h4>Segurídad</h4></a>
 									<p>
-										No podemos predecir el futuro, pero por ahora la única información valiosa que introducirá en WaoMovies, será su correo electronico y su nombre real, los otros usuarios y ni siquiera WaoMovies tendran acceso a esos datos sin su consentimiento, por ello le aseguramos total privacidad, para más información puede leer los terminos de <a href="/politicadeprivacidad/"><h4>privacidad.</h4></a>.
+										No podemos predecir el futuro, pero por ahora la única información valiosa que introducirá en WaoMovies, será su correo electronico y su nombre real, los otros usuarios y ni siquiera WaoMovies tendran acceso a esos datos sin su consentimiento, por ello le aseguramos total privacidad, para más información puede leer los terminos de <a href="/politicadeprivacidad/"><h4>privacidad.</h4></a>
 									</p>
 								</div>
 							</div>
@@ -198,7 +198,7 @@
 								<div class="desc">
 									<a href="#"><h4>Calidad</h4></a>
 									<p>
-										La calidad no es una opción para Wao es una obligación, estamos en constante mejora de nuestros servicios y abiertos a sugerencias, por lo tanto si tiene alguna, no dude contactanos a través del formulario al final de esta página...
+										La calidad no es una opción para Wao es una obligación, estamos en constante mejora de nuestros servicios y abiertos a sugerencias, por lo tanto si tiene alguna, no dude en contactarnos a través del formulario al final de esta página...
 									</p>
 								</div>
 							</div>
@@ -219,7 +219,7 @@
 							</h1>
 							<p><span>Como usar WaoMovies</span></p>
 							<p>
-								WaoMovies cuenta con una interfaz de usuario bastante amplia,por lo tanto con un soporte del mismo nivel, por ello creo que todos los usuarios deben estar informados para saber que hacer cuando olvíde su contraseña, en caso que no pueda acceder a WaoMovies, o sí desea cambiar la información de usuario, etc...
+								WaoMovies cuenta con una interfaz de usuario bastante amplia, por lo tanto con un soporte del mismo nivel, por ello creo que todos los usuarios deben estar informados para saber que hacer cuando olvíde su contraseña, en caso que no pueda acceder a WaoMovies, o sí desea cambiar la información de usuario, etc...
 							</p>
 						</div>
 						<section class="video-area col-lg-6" style="padding: 200px 0 200px 0;
