--- a/templates/sobre/index.html
+++ b/templates/sobre/index.html
@@ -250,7 +250,7 @@
 							<h1 class="text-white" style="text-align: center;">Películas y series <br>
 							</h1>
 							<p style="position: relative; left: 2px;">
-								Si es cierto que nosotros no alojamos las películas ni las series en nuestros servidores, sin embargo, tratamos de ofrecerte la mejor calidad. en caso de películas en estreno, tenemos una sección en waomovies que muestra los trailers de las películas en estreno con más demanda por los usuarios del cine, pero estas películas aparecerán en WaoMovies una vez y estén fuera de las salas de cine.
+								Si es cierto que nosotros no alojamos las películas ni las series en nuestros servidores, sin embargo, tratamos de ofrecerte la mejor calidad. En caso de películas en estreno, tenemos una sección en waomovies que muestra los trailers de las películas en estreno con más demanda por los usuarios del cine, pero estas películas aparecerán en WaoMovies una vez y estén fuera de las salas de cine.
 							</p>
 						</div>
 					</div>
