--- a/templates/index.html
+++ b/templates/index.html
@@ -136,7 +136,7 @@ background: linear-gradient(to right, rgba(248,54,0, 0.7), rgba(254,140,0,0.7));
 				</div>
 				<div class="tabs">
 					<ul class="tab-links">
-						<li class="active"><a href="#tab1">#Popular</a></li>
+						<li class="active"><a href="#tab1">#Recientes</a></li>
 						{% if request.user.favoritos %}
 						<li><a href="#tab2" id="tabparati"> #Para ti</a></li>
 						{% else %}
@@ -1186,7 +1186,7 @@ $('#tabcontentin').append('<div id="zzz'+value.id+'"  class="slide-it" style="wi
 		<div class="row ipad-width">
 			<div class="col-md-12">
 				<div class="title-hd">
-					<h2>En cartelera</h2>
+					<h2>Próximamente</h2>
 					
 				</div>
 				<div class="videos">
