--- a/templates/index.html
+++ b/templates/index.html
@@ -2,53 +2,8 @@
 {% load static %}
 
 <body >
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v3.1';
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-{% block scriptt%}
-<script type="text/javascript">
 
-function getCookie(name) {
-    var cookieValue = null;
-    if (document.cookie && document.cookie !== '') {
-        var cookies = document.cookie.split(';');
-        for (var i = 0; i < cookies.length; i++) {
-            var cookie = jQuery.trim(cookies[i]);
-            if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                break;
-            }
-        }
-    }
-    return cookieValue;
-}
 
-var csrftoken = getCookie('csrftoken');
-
-function csrfSafeMethod(method) {
-    
-    return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-}
-$.ajaxSetup({
-    beforeSend: function(xhr, settings) {
-        if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-            xhr.setRequestHeader("X-CSRFToken", csrftoken);
-        }
-    }
-});
-</script>
-<script type="text/javascript">
-	
-													   
-													
-</script>
-
-{% endblock %}
 {% block content %}
 
 
@@ -1225,7 +1180,7 @@ $('#tabcontentin').append('<div id="zzz'+value.id+'"  class="slide-it" style="wi
 		<div class="row ipad-width">
 			<div class="col-md-8">
 				<div class="ads">
-					<img src="images/uploads/ads2.png" alt="" width="728" height="106">
+					<!--img src="images/uploads/ads2.png" alt="" width="728" height="106"-->
 				</div>
 				<div class="title-hd">
 					<h2>¡Avisos!:</h2>
@@ -1236,7 +1191,7 @@ $('#tabcontentin').append('<div id="zzz'+value.id+'"  class="slide-it" style="wi
 				        <div id="tab31" class="tab active">
 				            <div class="row">
 				            	<div class="blog-item-style-1">
-				            		<img src="images/uploads/blog-it1.jpg" alt="" width="170" height="250">
+				            		
 				            		<div class="blog-it-infor">
 				            			<h3><a href="#">Estamos en remodelaciones</a></h3>
 				            			<span class="time"></span>
