--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -1504,7 +1504,7 @@ $(this).remove();
                      </p>
                     </div>
                     <div class="ads">
-            <img src="images/uploads/ads1.png" alt="">
+            <!--img src="images/uploads/ads1.png" alt=""-->
            </div>
                    </div>
                   </div>
