--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
   <link rel="stylesheet" href="{% static 'frameworks/css/bootstrap.css' %}">
   <link rel="stylesheet" href="{% static 'frameworks/css/mdb.css' %}">
 
-
+<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 
   <link rel="stylesheet" href="{% static 'css/star-rating-svg.css' %}">
   
