--- a/templates/base.html
+++ b/templates/base.html
@@ -41,13 +41,15 @@
   <meta name="format-detection" content="telephone-no">
 
   <link rel="stylesheet" href="{% static 'css/plugins.css' %}">
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+<link rel="stylesheet" type="text/css" href="https://s3-us-west-1.amazonaws.com/waomovies/static/css/style.css">
+  <!--link rel="stylesheet" href="{% static 'css/style.css' %}"-->
   <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
 
   <link rel="stylesheet" href="{% static 'frameworks/css/bootstrap.css' %}">
   <link rel="stylesheet" href="{% static 'frameworks/css/mdb.css' %}">
 
 <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+
 
   <link rel="stylesheet" href="{% static 'css/star-rating-svg.css' %}">
   
