--- a/templates/index.html
+++ b/templates/index.html
@@ -1212,7 +1212,7 @@ $('#tabcontentin').append('<div id="zzz'+value.id+'"  class="slide-it" style="wi
 				            	<div class="blog-item-style-1">
 				            		
 				            		<div class="blog-it-infor">
-				            			<h3><a href="#">Estamos en remodelaciones</a></h3>
+				            			<h3><a href="#">Las series estarán disponibles a partir de Marzo 24.</a></h3>
 				            			<span class="time"></span>
 				            			<p></p>
 				            		</div>
@@ -1300,3 +1300,5 @@ $('#tabcontentin').append('<div id="zzz'+value.id+'"  class="slide-it" style="wi
 </body>
 
 </html>
+
+
