--- a/templates/generoview.html
+++ b/templates/generoview.html
@@ -304,10 +304,63 @@
 	
 	{% endif %}
 </div>
+
 					{% endif %}
 
 
+{% else %}
 
+<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<div class="hero-ct">
+					{% if genero3 == "DRA" %}
+					<h1 id="h1">Drama </h1>
+					
+					{% endif %}
+					{% if genero3 == "ACC" %}
+					<h1 id="h1">Acción </h1>
+					
+					{% endif %}
+					{% if genero3 == "SC" %}
+					<h1 id="h1">Ciencia Ficción </h1>
+					
+					{% endif %}
+					{% if genero3 == "ROM" %}
+					<h1 id="h1">Romance </h1>
+					
+					{% endif %}
+					{% if genero3 == "CRI" %}
+					<h1 id="h1">Crimen </h1>
+					
+					{% endif %}
+					{% if genero3 == "COME" %}
+					<h1 id="h1">Comedia </h1>
+					
+					{% endif %}
+					{% if genero3 == "TER" %}
+					<h1 id="h1">Terror </h1>
+					
+					{% endif %}
+					{% if genero3 == "AVEN" %}
+					<h1 id="h1">Aventura </h1>
+					
+					{% endif %}
+					{% if genero3 == "SUS" %}
+					<h1 id="h1">Suspenso </h1>
+					
+					{% endif %}
+					{% if genero3 == "ANI" %}
+					<h1 id="h1">Animación</h1>
+					
+					{% endif %}
+					{% if genero3 == "FANT" %}
+					<h1 id="h1">Fantasía</h1>
+					
+					{% endif %}
+					{% if genero3 == "DOCU" %}
+					<h1 id="h1">Documental</h1>
+					{% endif %}
 
 	<script type="text/javascript">
 	function generosele(b) {
