--- a/templates/base.html
+++ b/templates/base.html
@@ -21,12 +21,15 @@
 
 
     <title>WaoMovies</title>
+
 <link href="https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Dosis:400,700,500|Nunito:300,400,600'>
     
          <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+         <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all" /> 
            <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+
 <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-multiselect.css' %}">
 <script type="text/javascript" src="{% static 'js/websocketbridge.js' %}"></script>
 
@@ -53,6 +56,8 @@
 
   <link rel="stylesheet" href="{% static 'css/star-rating-svg.css' %}">
   
+
+
   <script type="text/javascript">
     (function(a) {
 (jQuery.browser = jQuery.browser || {}).mobile = /(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino/i.test(a) || /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0, 4))
@@ -457,8 +462,9 @@ background: linear-gradient(to right, #93291E, #ED213A); /* W3C, IE 10+/ Edge, F
 
 <div id="searchdiv" style=" display: none;background-color: rgba(0,0,0,0.80); width: 100%; height: 100%; position: fixed; z-index: 1;">
   <div style="display: block; background: blue;">
-  <form method="post" id="searchdiv" action="/search/" style=" position: absolute; top: 100px; z-index: 1000; left: 25%;">{% csrf_token %}
+  <form class="searchform" method="post" id="searchform" action="/search/" style=" position: absolute; top: 100px; z-index: 1000; left: 25%;">{% csrf_token %}
   <input class="form-control" type="search" name="src" placeholder="Buscar en WaoMovies..." id="searches">
+  <button type="submit">Buscar</button>
   <ul class="list-group" id="putaso" style=" position: absolute;"></ul>
   <br/>
   <div id="displayloadmovil2" style="display: none;"><img style="position: relative; left: 50%;" height="50" width="50" src="{% static "img/fancybox_loading@2x.gif" %}"></div>
@@ -468,74 +474,17 @@ background: linear-gradient(to right, #93291E, #ED213A); /* W3C, IE 10+/ Edge, F
   </div>
 </div>
 <script>
-$(document).ready(function(){
- $.ajaxSetup({ cache: false });
- $('#searches').keyup(function(es){
-  es.stopImmediatePropagation();
-
-  $('#putaso').html('');
-  $('#state').val('');
-  var searchField = $('#searches').val();
-  var expression = new RegExp(searchField, "i");
-  var resulta = document.getElementById('searches');
-  var resultac = document.getElementById('putaso')
-  var widthscreen = $( window ).width()
-
-  if (widthscreen <= 991) {
-    var search = document.getElementById('searchshow').style.display = 'initial'
-  $.getJSON('/pelis/', function(data) {
-   $.each(data, function(key, value){
-    if (value.titulo.search(expression) != -1 && resulta.value.length > 3 && widthscreen < 991)
-    {
-      document.getElementById('displayloadmovil2').style.display="initial"
-      setTimeout(function(){
-     $('#putaso').append('<li id="'+value.slug+'" class=" '+value.slug+' list-group-item link-class"><a style="color: black;" href="/peliculas/'+value.slug+'/"><img src="'+value.Cover+'" height="40" width="40" class="img-thumbnail" /> '+value.titulo+' | <span class="text-muted">'+value.director+'</span></a></li>');
-
-      document.getElementById('displayloadmovil2').style.display="none"
-   
-     if (document.getElementsByClassName(''+value.slug+'').length > 1)
-     {
-      node = document.getElementById(''+value.slug+'')
-        node.parentNode.removeChild(node)
-     }
-     }, 800);
-    }
-
-    if (resulta.value.length == 0)
-    {
-      $('#putaso').empty();
-      resultac.style.display = "none"
-      document.getElementById('displayloadmovil2').style.display="none"
-
-    }
-     window.onclick = function(event) {
-          if (event.target != result) {
-              result.style.display = "none";
-          }
-      }
-    if (resulta.value.length > 3 && widthscreen < 991)
-    {
-      resultac.style.display = "initial"
-
-    }
-   });   
-  });
-  }
- });
- 
- $('#putaso').on('click', 'li', function() {
-  var click_text = $(this).text().split('|');
-  $('#searches').val($.trim(click_text[0]));
-  $("#putaso").html('');
- });
- // When the user clicks anywhere outside of the modal, close it
- var result = document.getElementById('pustaso');
-      window.onclick = function(event) {
-          if (event.target == result) {
-              result.style.display = "none";
-          }
-      }
-});
+        $(document).ready(function(){ 
+            $("#searches").autocomplete({
+                source: "/search_ajax/",
+                minLength: 2,
+                open: function(){
+                    setTimeout(function () {
+                        $('.ui-autocomplete').css('z-index', 99);
+                    }, 0);
+                }
+              });
+        });
 </script>
 <script type="text/javascript">
 
@@ -1977,7 +1926,19 @@ $('#labelcountact').append(''+data[0].unread+'');
       </div>
       <ul class="list-group" id="result" style="margin-left: -37px; position: absolute;"></ul>
       </form>
-      
+      <script>
+        $(document).ready(function(){ 
+            $("#search").autocomplete({
+                source: "/search_ajax/",
+                minLength: 2,
+                open: function(){
+                    setTimeout(function () {
+                        $('.ui-autocomplete').css('z-index', 99);
+                    }, 0);
+                }
+              });
+        });
+</script>
   </div>
 
 
@@ -2207,6 +2168,7 @@ function passwordVerify() {
 </script>
 
     <script type="text/javascript" src=" {% static 'frameworks/js/jquery-3.2.1.min.js' %}"></script>
+
     <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
 <script src="{% static 'js/infinite.js' %}"></script>
     <script type="text/javascript" src="{% static 'frameworks/js/popper.min.js' %}"></script>
@@ -2287,7 +2249,9 @@ function passwordVerify() {
       } 
    } 
 </script> 
+
  <script src="{% static 'js/jquery.js' %}"></script>
+
 <script type="text/javascript" src="{% static 'js/bootstrap-multiselect.js' %}"></script>
 
 <script src="{% static 'frameworks/js/jquery.Jcrop.min.js' %}"></script>
@@ -2408,6 +2372,8 @@ function passwordVerify() {
   </div>
 </footer>
 <!-- end of footer section-->
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>    
 </body>
 </html>
 
