--- a/templates/password_reset_confirm.html
+++ b/templates/password_reset_confirm.html
@@ -37,6 +37,50 @@ img.emoji {
 	background: none !important;
 	padding: 0 !important;
 }
+
+@media (min-height: 0px) and (max-height: 600px) {
+	#text-block-98b838cb14828f1bb30771b38ffc6b10 {
+		display:none;
+	}
+
+	#wrapper {
+		padding-top: 100px;
+	}
+
+}
+
+@media (min-height: 768px) and (max-height: 881px) {
+	#wrapper {
+		position: static;
+		top: -100px;
+	}
+
+}
+
+
+@media (min-height: 881px) and (max-height: 1028px) {
+	#wrapper {
+		position: static;
+		top: -200px;
+	}
+
+}
+
+@media (min-height: 1028px) and (max-height: 1200px) {
+	#wrapper {
+		position: static;
+		top: -300px;
+	}
+
+}
+
+@media (min-height: 1200px) and (max-height: 1400px) {
+	#wrapper {
+		position: static;
+		top: -380px;
+	}
+
+}
 </style>
 <link rel='stylesheet' id='bootstrap-css' href='{% static "" %}wp-content/themes/jevelin/css/bootstrap.min.css?ver=3.3.4' type='text/css' media='all'>
 <link rel='stylesheet' id='animate-css' href='{% static "" %}wp-content/themes/jevelin/css/animate.min.css?ver=3.4.0' type='text/css' media='all'>
