--- a/templates/base.html
+++ b/templates/base.html
@@ -2372,7 +2372,7 @@ function passwordVerify() {
   </div>
 </footer>
 <!-- end of footer section-->
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>    
 </body>
 </html>
