--- a/templates/base.html
+++ b/templates/base.html
@@ -2017,6 +2017,8 @@ $(document).ready(function(){
 </script>
 {% endif %}
 
+{% if request.user.is_authenticated %}
+
 <script type="text/javascript">
   var username = document.forms['formulario']['usuario'];
   var full_name = document.forms['formulario']['nombre'];
@@ -2167,6 +2169,7 @@ function passwordVerify() {
 
 </script>
 
+{% endif %}
     <script type="text/javascript" src=" {% static 'frameworks/js/jquery-3.2.1.min.js' %}"></script>
 
     <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
@@ -2372,8 +2375,7 @@ function passwordVerify() {
   </div>
 </footer>
 <!-- end of footer section-->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
- <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>    
+ <script src="{% static 'js/jquery-ui.min.js' %}" type="text/javascript"></script>      
 </body>
 </html>
 
