--- a/templates/base.html
+++ b/templates/base.html
@@ -2375,7 +2375,7 @@ function passwordVerify() {
   </div>
 </footer>
 <!-- end of footer section-->
- <script src="{% static 'js/jquery-ui.min.js' %}" type="text/javascript"></script>      
+ <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all" />    
 </body>
 </html>
 
