--- a/templates/base.html
+++ b/templates/base.html
@@ -2375,7 +2375,7 @@ function passwordVerify() {
   </div>
 </footer>
 <!-- end of footer section-->
- <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all" />    
+ <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all" />    
 </body>
 </html>
 
