--- a/templates/base.html
+++ b/templates/base.html
@@ -96,7 +96,8 @@ movile = jQuery.browser.mobile
   .usetos {
     color: black;
   }
-@media (min-width: 100px) and (max-width: 450px) {
+
+@media (min-width: 100px) and (max-width: 342px) {
   #searches {
     border-radius: 20px;
     width: 120%;
@@ -110,6 +111,30 @@ movile = jQuery.browser.mobile
     right: -10px;
     overflow-y: scroll;
     max-height: 350px;
+  }
+  .btn-searchm {
+   display: none;
+  }
+  }
+
+
+@media (min-width: 342px) and (max-width: 450px) {
+  #searches {
+    border-radius: 20px;
+    width: 120%;
+    position: relative;
+    right: 30px;
+  }
+  #putaso {
+    width: 120%;
+    border-radius: 15px;
+    position: relative;
+    right: -10px;
+    overflow-y: scroll;
+    max-height: 350px;
+  }
+  .btn-searchm {
+    margin-left: 215px !important;
   }
   }
 
@@ -128,6 +153,9 @@ movile = jQuery.browser.mobile
     overflow-y: scroll;
     max-height: 350px;
   }
+  .btn-searchm {
+    margin-left: 230px !important;
+  }
   }
 
 
@@ -145,6 +173,10 @@ movile = jQuery.browser.mobile
     right: -170px;
     overflow-y: scroll;
     max-height: 350px;
+  }
+
+  .btn-searchm {
+    margin-left: 370px !important;
   }
   }
 
@@ -464,7 +496,7 @@ background: linear-gradient(to right, #93291E, #ED213A); /* W3C, IE 10+/ Edge, F
   <div style="display: block; background: blue;">
   <form class="searchform" method="post" id="searchform" action="/search/" style=" position: absolute; top: 100px; z-index: 1000; left: 25%;">{% csrf_token %}
   <input class="form-control" type="search" name="src" placeholder="Buscar en WaoMovies..." id="searches">
-  <button type="submit">Buscar</button>
+  <button type="submit" style="position: absolute; top: 0px; margin-left: 425px; padding: 5px 12px;" class="btn btn-primary btn-searchm"><i class="fa fa-search" style="color: white; font-size: 14px;"></i></button>
   <ul class="list-group" id="putaso" style=" position: absolute;"></ul>
   <br/>
   <div id="displayloadmovil2" style="display: none;"><img style="position: relative; left: 50%;" height="50" width="50" src="{% static "img/fancybox_loading@2x.gif" %}"></div>
@@ -2375,7 +2407,7 @@ function passwordVerify() {
   </div>
 </footer>
 <!-- end of footer section-->
- <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all" />    
+ <script src="{% static 'js/jquery-ui.min.js' %}" type="text/javascript"></script>     
 </body>
 </html>
 
