--- a/templates/base.html
+++ b/templates/base.html
@@ -2407,7 +2407,7 @@ function passwordVerify() {
   </div>
 </footer>
 <!-- end of footer section-->
- <script src="https://s3-us-west-1.amazonaws.com/waomovies/static/js/jquery-ui.min.js" type="text/javascript"></script>     
+ <script src="{% static 'js/jquery-ui.min.js' %}" type="text/javascript"></script>     
 </body>
 </html>
 
