--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Dosis:400,700,500|Nunito:300,400,600'>
     
          <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-         <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all" /> 
+         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
            <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 
@@ -509,7 +509,6 @@ background: linear-gradient(to right, #93291E, #ED213A); /* W3C, IE 10+/ Edge, F
         $(document).ready(function(){ 
             $("#searches").autocomplete({
                 source: "/search_ajax/",
-                minLength: 2,
                 open: function(){
                     setTimeout(function () {
                         $('.ui-autocomplete').css('z-index', 99);
@@ -2407,7 +2406,7 @@ function passwordVerify() {
   </div>
 </footer>
 <!-- end of footer section-->
- <script src="https://wmoviestest.herokuapp.com/static/js/jquery-ui.min.js" type="text/javascript"></script>     
+ <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>     
 </body>
 </html>
 
