--- a/templates/movielist.html
+++ b/templates/movielist.html
@@ -65,6 +65,14 @@
 					<img src="{{ o.Cover.url }}{{ o.serie_cover.url }}" alt="" class="">
 						{% if  series_filt %}	{% include 'ajaxserielist.html' %}{% else %}{% include 'ajaxlist.html' %}{% endif %}
 
+						<style type="text/css">
+							@media (max-width: 600px){
+								.mv-item-infor p {
+									margin-left: 30px !important;
+								}
+							}
+						</style>
+
 					<div class="mv-item-infor">
 						<h6><a href="/{% if not series_filt %}peliculas{%else%}series{% endif %}/{{ o.slug }}">{{ o.titulo }} <span>  &nbsp; ({{ o.fecha_de_lanzamiento|date:"Y" }})</span></a></h6>
 						<i class="fa fa-star point" aria-hidden="true"></i><span> {{ o.puntuacion }}</span> /10</p>
